feat(dashboard,route,swagger):add query data api jobByStatus,jobByMaxSalary,jobByMinSalary,jobByIndustry,jobByComponySize
