# src/routes/dashboard.route.js
@@ -8,6 +8,15 @@ router.get("/jobByRangeSalary", dashboardC.jobByRangeSalary);
 // router.get("/topSkillByPost", dashboardC.topSkillByPost);
 // router.post("/", dashboardC.createUser);
 
+//max
+router.post("/jobByStatus", dashboardC.jobByStatus);
+router.post("/jobByMaxSalary", dashboardC.jobByMaxSalary);
+router.post("/jobByMinSalary", dashboardC.jobByMinSalary);
+router.get("/jobByIndustry", dashboardC.jobByIndustry);
+router.get("/jobByIndustry/:industry", dashboardC.jobByIndustry);
+router.get("/jobByComponySize", dashboardC.jobByComponySize);
+router.get("/jobByComponySize/:componySize", dashboardC.jobByComponySize);
+
 // art
 router.get("/jobRatioBySubcategory", dashboardC.jobRatioBySubcategory);
 router.get("/jobRatioByType", dashboardC.jobRatioByType);
